fix: SonarQube 이슈 수정 (#228)
- SaDashboardServiceImpl: Collectors.toList() -> toList()
- SaDashboardServiceTest: isEqualTo(0) -> isZero()
- UserServiceImpl: switch문에 default case 추가